[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu/Scenes/MainMenuScene.gd" type="Script" id=1]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ReactionTestButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -110.5
margin_right = 100.0
margin_bottom = -33.5
text = "Reaction Test"

[node name="BinocularsProjectButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -228.0
margin_right = 100.0
margin_bottom = -151.0
text = "Binoculars Project"

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = 115.0
margin_right = 100.0
margin_bottom = 192.0
text = "Quit"

[node name="ColorBlindTestButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = 4.0
margin_right = 100.0
margin_bottom = 81.0002
text = "Color Blind Test"

[connection signal="button_up" from="ReactionTestButton" to="." method="_on_ReactionTestButton_button_up"]
[connection signal="button_up" from="BinocularsProjectButton" to="." method="_on_BinocularsProjectButton_button_up"]
[connection signal="button_up" from="QuitButton" to="." method="_on_QuitButton_button_up"]
[connection signal="button_up" from="ColorBlindTestButton" to="." method="_on_ColorBlindTestButton_button_up"]
